--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,21 +9,13 @@
 
   <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)">
+       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
-  </div>
-
-  <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="0">
-
-    <div fxFlex>
-      <app-dishdetail [dish] = "selectedDish"></app-dishdetail>
-    </div>
-
   </div>
 
 </div>
