--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -52,9 +52,9 @@
     </mat-card>
   </div>
 
-  <div fxFlex>
+  <div fxFlex *ngIf="leaders">
     <h2>Corporate Leadership</h2>
-    <mat-list *ngIf="leaders">
+    <mat-list>
       <mat-list-item *ngFor="let leader of leaders">
         <img matListAvatar src={{leader.image}} alt={{leader.name}}>
         <h3 matLine> {{leader.name }} {{leader.abbr }} </h3>
@@ -62,10 +62,10 @@
         <p matLine> {{leader.description }} </p>
       </mat-list-item>
     </mat-list>
+  </div>
 
-    <div fxFlex [hidden]="leaders">
-      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
-    </div>
+  <div fxFlex [hidden]="leaders">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
   </div>
 
 </div>
