--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,7 +56,7 @@
     <h2>Corporate Leadership</h2>
     <mat-list>
       <mat-list-item *ngFor="let leader of leaders">
-        <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+        <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
         <h3 matLine> {{leader.name }} {{leader.abbr }} </h3>
         <p matLine> {{leader.designation }} </p>
         <p matLine> {{leader.description }} </p>
@@ -64,8 +64,12 @@
     </mat-list>
   </div>
 
-  <div fxFlex [hidden]="leaders">
+  <div fxFlex [hidden]="leaders || errMess">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 
 </div>
